@@ -85,12 +85,13 @@ class Stella::CLI::Definition
   about "Preview a test plan"
   usage "stella preview [-p path/2/testplan.rb] "
   option :c, :clients, Integer, "Maximum number of virtual clients (ignored)"
+  option :a, :arrival, Float, "Arrival rate (ignored)"
   option :r, :repetitions, Integer, "Number of times to repeat the testplan (ignored)"
   option :d, :duration, String, "Max duration to run test (ignored)"
   option :W, :nowait, "Ignore wait times (ignored)"
   option :w, :wait, Float, "Wait time (in seconds) between client requests (ignored if testplan supplied)"
   option :p, :testplan, String, "Path to testplan" 
-  option :a, :arrival, Float, "Arrival rate (ignored)"
+  option :g, :granularity, Integer, "Amount of time (in seconds) between timeline rotations"
   command :preview => Stella::CLI
   
   about "Verify a test plan"
@@ -98,12 +99,13 @@ class Stella::CLI::Definition
   usage "e.g."
   usage "   $ stella verify -p path/2/testplan.rb http://stellaaahhhh.com/"
   option :c, :clients, Integer, "Maximum number of virtual clients (ignored)"
+  option :a, :arrival, Float, "Arrival rate (ignored)"
   option :r, :repetitions, Integer, "Number of times to repeat the testplan (ignored)"
   option :d, :duration, String, "Max duration to run test (ignored)"
   option :W, :nowait, "Ignore wait times"
   option :w, :wait, Float, "Wait time (in seconds) between client requests (ignored if testplan supplied)"
   option :p, :testplan, String, "Path to testplan" 
-  option :a, :arrival, Float, "Arrival rate (ignored)"
+  option :g, :granularity, Integer, "Amount of time (in seconds) between timeline rotations"
   command :verify => Stella::CLI
   
   about "Generate requests"
@@ -114,13 +116,15 @@ class Stella::CLI::Definition
   usage "   $ stella generate -p path/2/testplan.rb -u 100 -r 50 http://stellaaahhhh.com:3114/"
   #usage "   $ stella stress --clients=50 --repetitions=20 http://stellaaahhhh.com/"
   option :c, :clients, Integer, "Maximum number of virtual clients"
+  option :a, :arrival, Float, "Arrival rate (new clients per second)"
   option :r, :repetitions, Integer, "Number of times to repeat the testplan (per vclient)"
   option :d, :duration, String, "Max duration to run test"
   option :W, :nowait, "Ignore wait times"
   option :w, :wait, Float, "Wait time (in seconds) between client requests (ignored if testplan supplied)"
   option :p, :testplan, String, "Path to testplan" 
-  option :a, :arrival, Float, "Arrival rate (new clients per second)"
+  option :g, :granularity, Integer, "Amount of time (in seconds) between timeline rotations"
   command :generate => Stella::CLI
+  
   about "Initialize Stella configuration"
   command :init do
     Stella::Config.init
